# rust-terminal

./: .editorconfig  Cargo.toml  README.md  main.rs  scores.json  tables.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
src/: config.rs  data_loader.rs  main.rs  render.rs  watcher.rs
tests/: render_tests.rs
tests/snapshots/: render_tests__tests__render_app.snap
