[package]
name = "rust-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "8.1.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
textwrap = "0.16"
once_cell = "1.19"

[dev-dependencies]
insta = "1.43.1"
pretty_assertions = "1.4.1"
